<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="https://issue.swisscom.ch"
        android:inputType="textUri"
        android:key="@string/preference_jira_endpoint_key"
        android:title="@string/preference_jira_endpoint_title" />
    <EditTextPreference
        android:defaultValue=""
        android:inputType="text"
        android:key="@string/preference_jira_username_key"
        android:title="@string/preference_jira_username_title" />
    <EditTextPreference
        android:defaultValue=""
        android:inputType="textPassword"
        android:key="@string/preference_jira_password_key"
        android:title="@string/preference_jira_password_title" />
    <EditTextPreference
        android:defaultValue="CLOUDAC"
        android:inputType="text"
        android:key="@string/preference_jira_project_key"
        android:summary="Default project to use for creating new Jira issues."
        android:title="@string/preference_jira_project_title" />
    <ListPreference
        android:defaultValue="Task"
        android:entries="@array/jira_issue_types"
        android:entryValues="@array/jira_issue_types"
        android:summary="Default issue type to use for creating new Jira issues."
        android:key="@string/preference_jira_issuetype_key"
        android:title="@string/preference_jira_issuetype_title" />
    <ListPreference
        android:defaultValue="Low"
        android:entries="@array/jira_issue_priorities"
        android:entryValues="@array/jira_issue_priorities"
        android:summary="Default priority to use for creating new Jira issues."
        android:key="@string/preference_jira_priority_key"
        android:title="@string/preference_jira_priority_title" />
    <EditTextPreference
        android:defaultValue=""
        android:inputType="text"
        android:summary="Default epic to use for creating new Jira issues."
        android:key="@string/preference_jira_epic_key"
        android:title="@string/preference_jira_epic_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/preference_jira_create_flag_key"
        android:summary="Automatically show dialog popup to create new Jira issues upon app startup."
        android:title="@string/preference_jira_create_flag_title" />

</PreferenceScreen>